<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Photo Captioner</string>
    <string name="photo_button">Take a Photo</string>
    <string name="settings_button">Settings</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="cap_button">Caption</string>
    <string name="filter_button">Filter</string>
    <string name="caption_filter_txt">Caption:</string>
    <string name="date_from_txt">Date From:</string>
    <string name="date_to_txt">Date To:</string>
    <string name="gps_lat_txt">Latitude:</string>
    <string name="gps_long_txt">Longitude:</string>
    <string name="filter_apply_button">Filter</string>
    <string name="filter_clear_button">Clear</string>
    <string name="filter_cancel_button">Cancel</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">X</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">X</string>
    <string name="select_button">Select</string>
    <string name="year_hint">Year (YYYY)</string>
    <string name="month_hint">Month (MM)</string>
    <string name="day_button">Day (DD)</string>
</resources>
