<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> 607974c2bad54c8f8dfaf929423c8dcd71447231
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
<<<<<<< HEAD
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <TextView
                    android:text="@string/caption_filter_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/caption_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/date_from_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/date_from_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/date_to_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/date_to_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/gps_lat_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/gps_lat_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/gps_long_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/gps_long_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
            <Button
                android:id="@+id/btnFilter"
                android:text="@string/filter_apply_button"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btnClear"
                android:text="@string/filter_clear_button"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btnCancel"
                android:onClick="cancel"
                android:text="@string/filter_cancel_button"
                android:layout_weight="1" />
        </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
=======

    <TableRow>
        <EditText
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter_button" />
        <Button
            android:id="@+id/btnCancel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel_button" />
    </TableRow>

</TableLayout>
>>>>>>> 607974c2bad54c8f8dfaf929423c8dcd71447231
