<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context=".CalendarActivity">
    <TableRow>
        <CalendarView
            android:id="@+id/calendar"
            android:layout_weight="1"
            android:layout_span="4" />
    </TableRow>
    <TableRow>
        <EditText
            android:id="@+id/year"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/year_hint" />
        <EditText
            android:id="@+id/month"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/month_hint" />
        <EditText
            android:id="@+id/day"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/day_button" />
        <Button
            android:layout_weight="1"
            android:text="@string/select_button"
            android:onClick="clickSelectButton" />
    </TableRow>
</TableLayout>